--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "lance_dang <lancedang64@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^5.2.4",
+    "style-loader": "^2.0.0",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.7.0"
   }
